--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     <dependency>
       <groupId>org.spigotmc</groupId>
       <artifactId>spigot-api</artifactId>
-      <version>1.15.2-R0.1-SNAPSHOT</version>
+      <version>1.19.4-R0.1-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -58,11 +58,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.2</version>
+        <version>3.10.1</version>
         <configuration>
-          <target>14</target>
-          <source>14</source>
           <encoding>UTF-8</encoding>
+          <release>17</release>
           <useIncrementalCompilation>false</useIncrementalCompilation>
         </configuration>
       </plugin>
