--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,19 @@
       <id>placeholderapi</id>
       <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
     </repository>
+    <repository>
+      <id>papermc-repo</id>
+      <url>https://repo.papermc.io/repository/maven-public/</url>
+    </repository>
+    <repository>
+      <id>essentialsx-releases</id>
+      <name>EssentialsX API Repository</name>
+      <url>https://repo.essentialsx.net/releases</url>
+    </repository>
+    <repository>
+        <id>jitpack.io</id>
+        <url>https://jitpack.io</url>
+    </repository>
   </repositories>
 
   <dependencies>
@@ -30,6 +43,33 @@
       <artifactId>spigot-api</artifactId>
       <version>1.19.4-R0.1-SNAPSHOT</version>
       <scope>provided</scope>
+    </dependency>
+    <!-- Vault -->
+    <dependency>
+        <groupId>com.github.MilkBowl</groupId>
+        <artifactId>VaultAPI</artifactId>
+        <version>1.7</version>
+        <scope>provided</scope>
+    </dependency>
+    <!-- LuckPerms -->
+    <dependency>
+        <groupId>net.luckperms</groupId>
+        <artifactId>api</artifactId>
+        <version>5.4</version>
+        <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.papermc</groupId>
+      <artifactId>paperlib</artifactId>
+      <version>1.0.7</version>
+      <scope>provided</scope>
+    </dependency>
+    <!-- EssentialsX -->
+    <dependency>
+        <groupId>net.essentialsx</groupId>
+        <artifactId>EssentialsX</artifactId>
+        <version>2.20.1</version>
+        <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>me.clip</groupId>
